# TerminalEngine

./: CMakeLists.txt  README.md
example/include/: BaseObject.txt  Block.hpp  BlockSpawner.hpp  CatcherTest.hpp  StaticBlock.hpp
example/src/: Block.cpp  BlockSpawner.cpp  CatcherTest.cpp  StaticBlock.cpp
include/components/: AnimMesh.hpp  Area.hpp  CircleArea.hpp  CircleCollider.hpp  CollisionObject.hpp  ComponentUtils.hpp  GameObject.hpp  Mesh.hpp  PhysicsBody.hpp  PhysicsBody2D.hpp  RectArea.hpp  RectCollider.hpp  StaticMesh.hpp  Transform.hpp  Viewport.hpp  VisualObject.hpp
include/components/shapes/: Circle.hpp
include/core/: Engine.hpp  Game.hpp  GameData.hpp  Scene.hpp  SceneData.hpp
include/core/EventSystem/: EventHandler.hpp  Signal.hpp  SignalCatcher.hpp  SignalEmitter.hpp
include/input/: Input.hpp
include/physics/: PhysicsEngine.hpp
include/utils/: TerminalTools.hpp  Timer.hpp
src/: PhysicsEngine.hpp  main.cpp
src/components/: CollisionObject.cpp  DummyObject.cpp  GameObject.cpp  Viewport.cpp  VisualObject.cpp
src/core/: Engine.cpp  Game.cpp  Scene.cpp
src/core/EventSystem/: EventHandler.cpp  SignalCatcher.cpp  SignalEmitter.cpp
src/input/: Input.cpp
src/physics/: PhysicsEngine.cpp
src/utils/: TerminalTools.cpp  Timer.cpp
